Update 'python-xsntvmig' component image to: artifactory-docker-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/python-xsntvmig:e7b51eb2a92a2dc2644611b1cb3cef3143ae76c6@sha256:1b155ae2929d21863b7c1c7c6fd0e1965d1f1e58ba954574b26a1a3dc654483f

--- a/components/python-xsntvmig/overlays/development/deployment-patch.yaml
+++ b/components/python-xsntvmig/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: python-xsntvmig
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: artifactory-docker-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/python-xsntvmig:e7b51eb2a92a2dc2644611b1cb3cef3143ae76c6@sha256:1b155ae2929d21863b7c1c7c6fd0e1965d1f1e58ba954574b26a1a3dc654483f
+          name: container-image
