--- a/components/python-xsntvmig/overlays/prod/deployment-patch.yaml
+++ b/components/python-xsntvmig/overlays/prod/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
+      - image: artifactory-docker-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/python-xsntvmig:7f6f22af8315d08a06b31a551151871481a3f089@sha256:55deec633144394dd40322251766b95b2b69dd44cbe6e3e029f1cb05a8473bcf
         name: container-image  
